--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
                 <div class="ss-copyright">
                     <span>Copyright Prosperous Ministry 2024</span>
-                    <span>Designed by <a href="https://www.styleshout.com/">StyleShout</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a></span>
+<!--                    <span>Designed by <a href="https://www.styleshout.com/">StyleShout</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a></span>-->
                 </div>
             </div>
 
