--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
             <div class="column large-6 w-900-stack s-about__intro-text">
                 <h1 class="display-1" data-aos="fade-up">
-                    We are a ministry committed to spreading the Gospel, serving communities, and living out our faith.
+<!--                    We are a ministry committed to spreading the Gospel, serving communities, and living out our faith.-->
                 </h1>
 
                 <p class="lead" data-aos="fade-up">
-                    Our mission is to bring hope and love to those in need. Through outreach, worship, and fellowship, we seek to transform lives and build a stronger, faith-centered world.
+                    Prosperous People Ministry, where God delights in your prosperity and growth. In our community, we pray, fellowship, teach the word and network with one another, all while embracing His promise of health and abundance. Thank you for visiting and I look forward to connecting with you. (Abayomi Bello, President PPM)
                 </p>
             </div>
 
@@ -160,29 +160,29 @@
 
         <div class="row block-large-1-2 block-tab-full s-about__process item-list">
             <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Pray</h3>
+                <h3 class="item-title">Mission</h3>
                 <p>
-                    We believe in the power of prayer. Through prayer, we connect with God, seeking guidance, strength, and wisdom in all we do.
+                    At Prosperous People Ministry, our mission is to transform lives through the truth of God’s Word, empowering individuals to prosper in every area—spiritually, mentally, physically, and socially. We are dedicated to teaching the true message of prosperity and equipping believers to live victorious, abundant lives that reflect God’s goodness and grace.
                 </p>
             </div>
             <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Serve</h3>
+                <h3 class="item-title">Vision</h3>
                 <p>
-                    Our ministry is dedicated to serving others, reflecting Christ’s love through acts of kindness, compassion, and outreach to the less fortunate.
+                    We envision a community of believers who thrive in God’s promises, carrying the light of Christ across all borders and breaking through limitations. Through faith, fellowship, and strategic outreach, we aim to redefine prosperity and inspire a generation to live fully in God’s abundant love and purpose.
                 </p>
             </div>
-            <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Teach</h3>
-                <p>
-                    We are committed to teaching the Word of God, helping others grow in their faith and understanding of the Bible.
-                </p>
-            </div>
-            <div class="column item item-process" data-aos="fade-up">
-                <h3 class="item-title">Transform</h3>
-                <p>
-                    Through God’s grace, we seek to transform lives, helping individuals and communities to experience spiritual growth and renewal.
-                </p>
-            </div>
+<!--            <div class="column item item-process" data-aos="fade-up">-->
+<!--                <h3 class="item-title">Teach</h3>-->
+<!--                <p>-->
+<!--                    We are committed to teaching the Word of God, helping others grow in their faith and understanding of the Bible.-->
+<!--                </p>-->
+<!--            </div>-->
+<!--            <div class="column item item-process" data-aos="fade-up">-->
+<!--                <h3 class="item-title">Transform</h3>-->
+<!--                <p>-->
+<!--                    Through God’s grace, we seek to transform lives, helping individuals and communities to experience spiritual growth and renewal.-->
+<!--                </p>-->
+<!--            </div>-->
         </div>
 
     </section> <!-- end s-about -->
@@ -195,19 +195,16 @@
         <div class="row">
             <div class="column large-12">
                 <div class="section-title" data-num="02" data-aos="fade-up">
-                    <h3 class="h6">Our Ministry Work</h3>
+                    <h3 class="h6">Our Events
+                    </h3>
                 </div>
             </div>
-            <div class="column large-6 w-900-stack">
+            <div class="column large-12 w-900-stack">
                 <h1 class="display-1" data-aos="fade-up">
-                    We are committed to serving communities through faith-driven initiatives and spiritual growth.
+                    Experience engaging discussions and meaningful fellowship whether you are seeking spiritual growth, financial wisdom or physical health. This is the perfect opportunity to connect and thrive.
                 </h1>
             </div>
-            <div class="column large-6 w-900-stack">
-                <p class="lead" data-aos="fade-up">
-                    Our ministry involves a variety of efforts to support individuals and families, spreading the message of hope, love, and salvation. We focus on outreach, worship, and service, with the goal of transforming lives through faith.
-                </p>
-            </div>
+
         </div>
 
         <div class="row block-large-1-2 block-tab-full s-services__services item-list">
@@ -330,7 +327,8 @@
             <div class="column">
                 <h3 class="h6">Get In Touch</h3>
                 <h1 class="display-1">
-                    Do you have a prayer request or a spiritual need? We are here to listen and support you. Reach out, and let’s walk this journey of faith together.
+                    Come to Jesus
+                    Accept Jesus as your personal Lord and Saviour today
                 </h1>
             </div>
         </div> <!-- s-contact__top -->
@@ -338,7 +336,7 @@
         <div class="row h-text-center">
             <div class="column">
                 <p class="s-contact__email">
-                    <a href="mailto:#0">contact@ministry.org</a>
+                    <a target="_blank" href="https://forms.gle/PQovNmooa7UqggBx7">contact us</a>
                 </p>
             </div>
         </div>
@@ -376,7 +374,7 @@
             </div>
 
             <div class="column large-4 medium-12 s-footer__block--end">
-                <a href="mailto:info@prosperousministry.com" class="btn h-full-width">Let's Connect</a>
+                <a href="https://chat.whatsapp.com/GEWK7wUcXcPK6CFsdTTen3" class="btn h-full-width">Let's Connect</a>
 
                 <div class="ss-copyright">
                     <span>Copyright Prosperous Ministry 2024</span>
